--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
  
 
 <div>
-    <a href="#" ><img  onclick="closeAll()" onmouseover="closeAll()" src="{{ url_for('static', filename = 'img/alausa/sample.jpg')}}" width="100%" alt="image"></a>
+    <a href="#" ><img  onclick="closeAll()" onmouseover="closeAll()" src="{{ url_for('static', filename = 'img/alausa/Sample.jpg')}}" width="100%" alt="image"></a>
 </div>
 
 
