--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -406,9 +406,10 @@ ul li a:focus { border-bottom: 3px solid #fdbe0e; }
 
 
 .img-bottom{
-  margin-top: -1em;
-  padding-left: 0;
-  width: 90%;
+  margin-top: 0;
+  padding: 0;
+  margin-right: -4em;
+  width: 50%;
   
 }
 
