--- a/templates/base.html
+++ b/templates/base.html
@@ -454,7 +454,7 @@
     
                 <!-- Use any element to open/show the overlay navigation menu -->
                 
-                <a href="javascript:void(0)"><p class="menu"  onclick="openNav(), openShopmb()"> &#8285; </p></a>
+                <a href="javascript:void(0)"><img src="{{ url_for('static', filename = 'img/dot.svg')}}" class="menu"  onclick="openNav(), openShopmb()"></a>
                 <a href="#"><img class="logo" src="{{ url_for('static', filename = 'img/taeillo.jpg')}}" alt="image"></a>
                 <div class="icon1">
                   <a href="#"><img class="icon3" src="{{ url_for('static', filename = 'img/account.svg')}}" width="20px" height="20px" alt="image"></a>
