--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -584,6 +584,7 @@ ul li a:focus { border-bottom: 3px solid #fdbe0e; }
   }
 
   .btn{
+      height: 2em;
       display: flex;
       margin-top: -2.8em;
       margin-left: 7%;
@@ -749,10 +750,9 @@ ul li a:focus { border-bottom: 3px solid #fdbe0e; }
     position: fixed;
     font-size: 30px;
     font-weight: 800;
-    margin: 0.63em 1em 0 0;
-    padding-left: 5%;
+    margin: 0.6em 1em 0 0;
+    padding:0.2em 100% 2em 5%;
     background-color: #fff;
-    width: 100%;
     padding-bottom: 0.2em;
     color: #1b1b1b;
     
@@ -763,14 +763,14 @@ ul li a:focus { border-bottom: 3px solid #fdbe0e; }
     position: fixed;
     height: 36px;
     width: auto;
-    margin: 1.6em 0 0 15%;
+    margin: 1.4em 0 0 15%;
   }
 
   .icon1{
     display: flex;
     position: fixed;
     right: 5%;
-    margin-top: 2.2em;
+    margin-top: 2.1em;
   }
 
 
