--- a/templates/base.html
+++ b/templates/base.html
@@ -454,7 +454,7 @@
     
                 <!-- Use any element to open/show the overlay navigation menu -->
                 
-                <a href="javascript:void(0)"><img src="{{ url_for('static', filename = 'img/dot.svg')}}" class="menu"  onclick="openNav(), openShopmb()"></a>
+                <a href="javascript:void(0)"><img src="{{ url_for('static', filename = 'img/dot.svg')}}" class="menu"  onclick="openNav(), openShopmb()" width="28px" height="auto"></a>
                 <a href="#"><img class="logo" src="{{ url_for('static', filename = 'img/taeillo.jpg')}}" alt="image"></a>
                 <div class="icon1">
                   <a href="#"><img class="icon3" src="{{ url_for('static', filename = 'img/account.svg')}}" width="20px" height="20px" alt="image"></a>
@@ -466,7 +466,7 @@
   
   <form class="search-bar">
       <input type="search" class="search" name="search" placeholder="Search for products">
-      <button type="submit" class="btn"><img  src="{{ url_for('static', filename = 'img/iconfinder_icon-111-search_314807.svg')}}" width="16px" height="16px" alt="image"></button>
+      <button type="submit" class="btn"><img  src="{{ url_for('static', filename = 'img/iconfinder_icon-111-search_314807.svg')}}" width="14px" height="14px" alt="image"></button>
   </form>
 
 
