--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -126,25 +126,64 @@ ul li a:focus{
 
 ul li a:focus { border-bottom: 3px solid #fdbe0e; }
 
+.slides{
+  margin: 3em 0;
+}
+
+.product-cat{
+  display: flex;
+  margin: 3%;
+  width: 94%;
+  height: auto;
+  padding: 0;
+  justify-content: space-between;
+  border-bottom: 0.5px solid #eaeaea;
+}
+
+.product-cat-1{
+  width: 20%;
+  display: block;
+  padding-bottom: 3%;
+}
+
+.product-cat-2{
+  width: 45%;
+  display: block;
+}
+
+.product-img{
+  width: 100%;
+  padding-bottom: 2%;
+}
+
+.product-title{
+  margin-bottom: 5%;
+}
+
+.product-price{
+  margin-bottom: 5%;
+}
 
 .search{
   width: 255px;
-  height: 2em;
+  height: 2.5em;
   margin-top: 1.5em;
   margin-left: 2.6rem;
   
   border: none;
   background-color: #eaeaea;
-  border-radius: 4px;
+  border-radius: 3px;
   text-align: center;
   margin-right: 0;
 }
 
 .btn{
   display: flex;
-  margin-top: -1.7em;
+  margin-top: -1.8em;
   margin-left: 2.7rem;
   height: 16px;
+  border: none;
+  background-color: transparent;
 }
 
 .header{
@@ -750,7 +789,7 @@ ul li a:focus { border-bottom: 3px solid #fdbe0e; }
   .menu{
     display: flex;
     position: fixed;
-    margin: 1.4em 1em 1em 0;
+    margin: 1.6em 1em 1em 0;
     padding:0.5em 100% 10% 3%;
     background-color: #fff;
     padding-bottom: 0.2em;
@@ -763,7 +802,7 @@ ul li a:focus { border-bottom: 3px solid #fdbe0e; }
     position: fixed;
     height: 28px;
     width: auto;
-    margin: 2em 0 0 15%;
+    margin: 1.8em 0 0 15%;
   }
 
   .icon1{
@@ -986,6 +1025,10 @@ ul li a:focus { border-bottom: 3px solid #fdbe0e; }
     color: black;
     overflow-y: visible;
 
+  }
+
+  .product-cat{
+    display: none;
   }
 
 
