--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1030,6 +1030,26 @@ ul li a:focus { border-bottom: 3px solid #fdbe0e; }
   .product-cat{
     display: none;
   }
+  
+  .product-cat-1{
+    display: none;
+  }
+  
+  .product-cat-2{
+    display: none;
+  }
+  
+  .product-img{
+    display: none;
+  }
+  
+  .product-title{
+    display: none;
+  }
+  
+  .product-price{
+    display: none;
+  }
 
 
   #cancel1, #cancel2, #cancel3, #cancel4, #cancel5, #cancel6, #cancel7, #cancel8 {
